@@ -1,11 +1,7 @@
 package de.uka.ilkd.key.macros;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-
-import org.key_project.util.collection.ImmutableList;
 
 import de.uka.ilkd.key.control.AutoModeListener;
 import de.uka.ilkd.key.control.UserInterfaceControl;
@@ -16,6 +12,8 @@ import de.uka.ilkd.key.proof.Proof;
 import de.uka.ilkd.key.prover.ProverTaskListener;
 import de.uka.ilkd.key.prover.TaskStartedInfo.TaskKind;
 import de.uka.ilkd.key.prover.impl.DefaultTaskStartedInfo;
+
+import org.key_project.util.collection.ImmutableList;
 
 /**
  * The abstract class SequentialProofMacro can be used to create compound macros which sequentially
@@ -76,8 +74,8 @@ public abstract class SequentialProofMacro extends AbstractProofMacro {
     @Override
     public ProofMacroFinishedInfo applyTo(UserInterfaceControl uic, Proof proof,
             ImmutableList<Goal> goals, PosInOccurrence posInOcc, ProverTaskListener listener)
-            throws InterruptedException, Exception {
-        final List<Node> initNodes = new ArrayList<Node>(goals.size());
+            throws Exception {
+        final List<Node> initNodes = new ArrayList<>(goals.size());
         for (Goal goal : goals) {
             initNodes.add(goal.node());
         }
@@ -114,6 +112,6 @@ public abstract class SequentialProofMacro extends AbstractProofMacro {
             assert proofMacros != null;
             assert proofMacros.length > 0;
         }
-        return Collections.unmodifiableList(Arrays.asList(proofMacros));
+        return List.of(proofMacros);
     }
 }
